--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,6 @@
 	</div>
 </div>
 
-
 	<!-- End Top Bar -->
 
 
@@ -45,14 +44,14 @@
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item"><a href="#" class="nav-link">Priser</a></li>
 			<li class="nav-item"><a href="#" class="nav-link">Funktioner</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">Log ind</a></li>
-			<a href="#" class="btn btn-outline-success" role="button" aria-pressed="true">Kom i gang ></a>
+			<li class="nav-item"><a href="/frontend/login.html" class="nav-link">Log ind</a></li>
+			<a href="/frontend/signup.html" class="btn btn-outline-success" role="button" aria-pressed="true">Kom i gang ></a>
 		</ul>
-
+    
 	</div>
 	</div>
 </nav>
-	<!-- End Navigation -->
+
 
 
 	<!-- Calendar Image-->
