--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Sign up!</title>
+        <title>Login!</title>
         <link rel="shortcut icon" href="img/favicon.ico">
         <!-- Bootstrap 4.5 CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -27,15 +27,15 @@
          <div class="col-md-6 col-sm-12">
             <div class="login-form">
                <form>
-                   <h1>Opret profil<br></h1>
+                   <h1>Log ind<br></h1>
                  
                   <div class="form-group">
-                     <label>Indtast dit fulde navn</label>
-                     <input type="text" class="form-control" placeholder="Fornavn, efternavn">
+                     <label>E-mail</label>
+                     <input type="text" class="form-control" placeholder="Indtast din e-mail her">
                   </div>
                   <div class="form-group">
                      <label>Password</label>
-                     <input type="password" class="form-control" placeholder="Password">
+                     <input type="password" class="form-control" placeholder="Indtast dit password her">
                   </div>
                   <a href="#" class="btn btn-outline-success" role="button" aria-pressed="true">Login</a>
                   <a href="/frontend/index.html" class="btn btn-outline-danger" role="button" aria-pressed="true">Tilbage</a>
