Prices view added
Prices view added to project and routing between views

--- a/frontend/functionalities.html
+++ b/frontend/functionalities.html
@@ -23,7 +23,6 @@
 		</div>
 	</div>
 </div>
-
 	<!-- End Top Bar -->
 
 
@@ -51,44 +50,12 @@
 	</div>
 	</div>
 </nav>
-
-
-
-	<!-- Calendar Image-->
-	<div class="top-bar">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h1>Et bookingsystem <br>udviklet til dig <br>og dine kunder!</h1>
-					<p>Hold styr på din forretning og dine aftaler <br>- nemt og enkelt!</p>
-					<a href="/frontend/signup.html" class="btn btn-outline-success" role="button" aria-pressed="true">Kom i gang ></a>
-				</div>
-				<div class="col">
-					<img src="https://www.picktime.com/webassets/img/macbook_picktime_login_v2.png" width="900" height="500" style="float:right" alt="Calender Image">
-				</div>
-				
-			  </div>
-			<h2><br></h2>
-			<h1><br></h1>
-		</div>
-	</div>
-<!-- End Calendar Image -->
-
-
-	<!-- Main Page Heading -->
-
+<!-- End Navigation -->
 
 	<!-- Three Column Section -->
 
+
 	<!-- End Three Column Section -->
-
-
-	<!-- Emoji Navbar First -->
-
-
-
-	<!-- Modal Popup -->
-
 
 
 	<!-- Start Footer -->
