--- a/frontend/functionalities.html
+++ b/frontend/functionalities.html
@@ -41,9 +41,9 @@
 
 	<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item"><a href="/frontend/prices.html" class="nav-link">Priser</a></li>
-			<li class="nav-item"><a href="/frontend/functionalities.html" class="nav-link">Funktioner</a></li>
-			<li class="nav-item"><a href="/frontend/login.html" class="nav-link">Log ind</a></li>
+			<li class="nav-item"><a href="/prices.html" class="nav-link">Priser</a></li>
+			<li class="nav-item"><a href="/functionalities.html" class="nav-link">Funktioner</a></li>
+			<li class="nav-item"><a href="/login.html" class="nav-link">Log ind</a></li>
 			<a href="/frontend/signup.html" class="btn btn-outline-success" role="button" aria-pressed="true">Kom i gang ></a>
 		</ul>
     
