--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -33,12 +33,32 @@
                      <label>Indtast dit fulde navn</label>
                      <input type="text" class="form-control" placeholder="Fornavn, efternavn">
                   </div>
+                   <div class="form-group">
+                       <label>Indtast dit fulde navn</label>
+                       <input type="text" class="form-control" placeholder="Fornavn, efternavn">
+                   </div>
+                   <div class="form-group">
+                       <label>Indtast dit fulde navn</label>
+                       <input type="text" class="form-control" placeholder="Fornavn, efternavn">
+                   </div>
+                   <div class="form-group">
+                       <label>Indtast dit fulde navn</label>
+                       <input type="text" class="form-control" placeholder="Fornavn, efternavn">
+                   </div>
+                   <div class="form-group">
+                       <label>Indtast dit fulde navn</label>
+                       <input type="text" class="form-control" placeholder="Fornavn, efternavn">
+                   </div>
+                   <div class="form-group">
+                       <label>Indtast dit fulde navn</label>
+                       <input type="text" class="form-control" placeholder="Fornavn, efternavn">
+                   </div>
                   <div class="form-group">
                      <label>Password</label>
                      <input type="password" class="form-control" placeholder="Password">
                   </div>
                   <a href="#" class="btn btn-outline-success" role="button" aria-pressed="true">Login</a>
-                  <a href="/frontend/index.html" class="btn btn-outline-danger" role="button" aria-pressed="true">Tilbage</a>
+                  <a href="/index.html" class="btn btn-outline-danger" role="button" aria-pressed="true">Tilbage</a>
                </form>
             </div>
          </div>
